# poetry-aliases

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: publish.yml
