[tool.poetry]
name = "poetry-aliases"
version = "0.1.0"
description = ""
authors = ["celsius narhwal <hello@celsiusnarhwal.dev>"]
readme = "README.md"
packages = [{ include = "poetry_aliases" }]

[tool.poetry.dependencies]
python = "^3.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
